Fixed overflow issues with the slider

--- a/app/globals.css
+++ b/app/globals.css
@@ -37,6 +37,9 @@
   body {
     @apply m-0 p-0 min-h-screen;
     color: rgb(var(--foreground-rgb));
+    overflow-x: hidden;
+    position: relative;
+    width: 100%;
   }
 
   h1, h2, h3, h4, h5, h6 {
